--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="center jumbotron">
+	<h1>Welcome to Knight Academy!</h1>
+
+	<h2>
+		This is the home page for the academy of finest warriors the medieval world has ever seen!
+	</h2><br />
+
+	<%= link_to 'Register', new_user_registration_path, class: "btn btn-lg btn-primary" %>
+</div>
