--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
 	<header class="navbar navbar-fixed-top navbar-inverse">
 		<div class="container">
-			<p id="logo">Knight Academy</p>
+			<%= link_to "Knight Academy", root_path, id: "logo" %>
 		<nav>
 		<ul class="nav nav-pills navbar-nav navbar-right">
 	<% if current_user %>
