--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,7 @@
-<div class="container">
-<h2 id="sign-up">Sign up</h2>
+<div class="container" id="container_signup">
+	<div class="container">
+<h2 id="sign_up">Sign up</h2>
+</div>
 </div>
 
 <div class="row" id="card">
