--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -55,9 +55,9 @@
 
 			<div class="field">
 				<%= f.radio_button :instructor, true %>
-				<%= f.label :instructor, 'Instructor', :value => true %>
+				<%= f.label :instructor, 'Instructor', :value => true, :checked => true %>
 				<%= f.radio_button :student, true %>
-				<%= f.label :student, 'Student', :value => true %>
+				<%= f.label :student, 'Student', :value => true, :checked => true %>
 			</div><br />
 
 		  <div class="actions" id="sign-up">
